@@ -34,6 +34,9 @@
             - You can now export several Invoices or Quotes at once, as a .zip archive.
             - In list-views, the columns for "Total with VAT" & "Total without VAT" display the
               Sum & Average values for these fields (on all entities related to the list).
+        * Opportunities :
+            - In list-views, the columns for "Estimated sales" & "Made sales" display the
+              Sum & Average values for these fields (on all entities related to the list).
 
   Developers side :
   -----------------
